quick spacing fix

--- a/src/components/third-page/third-page.scss
+++ b/src/components/third-page/third-page.scss
@@ -14,7 +14,7 @@ $div-back: #576786;
         padding: 10px;
         margin: auto;
         text-align: left;
-        top: 10vh;
+        top: 8vh;
         margin: auto;
 
         .experience {
